feat: diffusionによるパラメータ生成が動く
